--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+server.port=8082
 
+spring.datasource.url=jdbc:mysql://localhost/deamanagement?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=oioioioi
+spring.sql.init.platform=mysql
