--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,6 @@
 server.port=8082
 
-server.servlet.context-path=/dea-management-api
+server.servlet.contextPath=/dea-management-api
 
-spring.jpa.show-sql=true
+spring.jpa.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
-spring.datasource.url=jdbc:mysql://localhost/deamanagement?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=oioioioi
-spring.sql.init.platform=mysql
