--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,1 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
+
+#spring.datasource.url=jdbc:mysql://localhost/dea_management_test?useSSL=false&allowPublicKeyRetrieval=true
+#spring.datasource.username=root
+#spring.datasource.password=oioioioi
+#spring.datasource.platform=mysql
